<resources>
    <string name="app_name">Four HW</string>
    <string name="blue_view">Blue view</string>
    <string name="search_contacts">Search contacts</string>
    <string name="no_contacts_please_add">No contacts. Please add</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="backspace">backspace</string>
    <string name="check">check</string>
    <string name="search_hint">search</string>
    <string name="contact_image">Contact image</string>
    <string name="contact_edited">Contact edited</string>
    <string name="enter_contact">Enter contact</string>
    <string name="enter_name">Enter name</string>
    <string name="contact_added">Contact added</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="remove">Remove</string>
    <string name="title_edit_contact">Edit contact</string>
    <string name="title_add_contact">Add contact</string>
</resources>