<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddContactActivity">

    <include
        android:id="@+id/toolBar"
        layout="@layout/tool_bar_with_button" />

    <RadioGroup
        android:id="@+id/rbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/phone_number"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
    </RadioGroup>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/rbg" />

    <EditText
        android:id="@+id/contactEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:hint="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>