<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/blue_view"
        android:src="@drawable/blue_background"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="70dp"
        android:text="@string/search_contacts"
        android:padding="16dp"
        android:drawablePadding="16dp"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:contentDescription="@string/blue_view"
        android:background="@drawable/white_background"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_contacts_please_add"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/add_person_button_background"
        android:drawableBottom="@drawable/ic_baseline_person_add_24"
        android:padding="10dp"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>